corrected spacing between nav links to appear more evenly centered on page

--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -54,6 +54,10 @@ nav a:hover,
     color: var(--mainColor)
 }
 
+nav .nav-spacer{
+    color:#2e008b;
+    background: #2e008b;
+}
 header .nav-btn {
     padding: 5px;
     cursor: pointer;
